add lib